--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <!-- PWA Meta Tags -->
     <link rel="manifest" href="/manifest.webmanifest" />
     <link rel="apple-touch-icon" href="/pwa-192x192.png" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <!-- Updated deprecated apple-mobile-web-app-capable to mobile-web-app-capable -->
+    <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
     <meta name="apple-mobile-web-app-title" content="CamText" />
     
